docs/v0.3.3/_sources/brainload.rst.txt
Brainload API Documentation
===========================

.. automodule:: brainload
    :members:
    :undoc-members:
    :show-inheritance:

Submodules
----------

brainload.freesurferdata module
-------------------------------

.. automodule:: brainload.freesurferdata
    :members:
    :undoc-members:
    :show-inheritance:


brainload.annotations module
----------------------------

.. automodule:: brainload.annotations
    :members:
    :undoc-members:
    :show-inheritance:


brainload.nitools module
------------------------

.. automodule:: brainload.nitools
    :members:
    :undoc-members:
    :show-inheritance:

brainload.spatial module
------------------------

.. automodule:: brainload.spatial
    :members:
    :undoc-members:
    :show-inheritance:

brainload.meshexport module
---------------------------

.. automodule:: brainload.meshexport
    :members:
    :undoc-members:
    :show-inheritance:
